--- a/2D Controller/Documentation.html
+++ b/2D Controller/Documentation.html
@@ -15,7 +15,7 @@
     <iframe id="myIframe" src="HTML/navigation-bar.html"></iframe>
 
     <div class="main-page-division">
-        <h3>Welcome to '2D Complete Character Controller,' a powerful Unity asset that simplifies the integration of advanced character mechanics and combat
+        <!-- <h3>Welcome to '2D Complete Character Controller,' a powerful Unity asset that simplifies the integration of advanced character mechanics and combat
         systems into your projects. This asset is crafted to streamline the development of dynamic and responsive characters, whether under player or AI control.</h3>
 
         <h1 style="margin-bottom: 0;">• Key Features:</h1>
@@ -37,7 +37,7 @@
         <h2>-AI Character:</h2>
         <h3>Encounter a dummy AI character. Use it to observe the combat system, experiment with provided attacks, and evaluate the system's versatility.
 
-        Immerse yourself in the example scene to gain a deeper understanding of how the '2D Complete Character Controller' can elevate your 2D game development experience.</h3>
+        Immerse yourself in the example scene to gain a deeper understanding of how the '2D Complete Character Controller' can elevate your 2D game development experience.</h3> -->
     </div>
 </body>
 </html>
