--- a/2D Controller/HTML/CLASSES/MANUAL/CHARACTER-LEDGE-GRAB/character-ledge-grab.html
+++ b/2D Controller/HTML/CLASSES/MANUAL/CHARACTER-LEDGE-GRAB/character-ledge-grab.html
@@ -28,7 +28,7 @@
             The <b>CharacterLedgeGrab</b> provides functionality for handling ledge grabbing and climbing behaviors for characters in a Unity project.
             It allows characters to grab onto ledges and climb up to reach higher areas.
             <br><br>
-            To utilize the component in your Unity project, proceed by attaching the script to the root object of your character in the Unity Editor,
+            To utilize the component in your Unity project, proceed by attaching the script to the <b>root</b> object of your character in the Unity Editor,
             and then configure the parameters exposed in the Inspector to customize the ledge grab and climb behaviour as per your requirements.
             <br><br>
             Note that the CharacterLedgeGrab <b>requires</b> a <a class="redirect-link" href="https://docs.unity3d.com/Manual/class-Rigidbody2D.html">Rigidbody2D</a>
