--- a/2D Controller/HTML/CLASSES/MANUAL/CHARACTER-MOVEMENT/character-movement.html
+++ b/2D Controller/HTML/CLASSES/MANUAL/CHARACTER-MOVEMENT/character-movement.html
@@ -27,7 +27,7 @@
         <p>
             The <b>CharacterMovement</b> script is a versatile component designed to handle character movement within a Unity project.
             <br><br>
-            To utilize the component in your Unity project, proceed by attaching the script to the root object of your character in the
+            To utilize the component in your Unity project, proceed by attaching the script to the <b>root</b> object of your character in the
             Unity Editor, and then configure the parameters exposed in the Inspector to customize the character's movement behaviour.
             <br><br>
             While the script can operate independently without any required components, exercise caution when altering the <b>movement speed</b>
