--- a/2D Controller/HTML/CLASSES/MANUAL/CHARACTER-SLIDE/character-slide.html
+++ b/2D Controller/HTML/CLASSES/MANUAL/CHARACTER-SLIDE/character-slide.html
@@ -28,7 +28,7 @@
             The <b>CharacterSlide</b> script provides functionality for character sliding behaviour in a Unity project. It allows
             characters to slide on floors and walls, offering customizable parameters to control the sliding mechanics.
             <br><br>
-            To utilize the component in your Unity project, proceed by attaching the script to the root object of your character in the Unity Editor,
+            To utilize the component in your Unity project, proceed by attaching the script to the <b>root</b> object of your character in the Unity Editor,
             and then configure the parameters exposed in the Inspector to customize the sliding behaviour as per your requirements.
             <br><br>
             Note that the CharacterSlide <b>requires</b> a <a class="redirect-link" href="https://docs.unity3d.com/Manual/class-Rigidbody2D.html">Rigidbody2D</a>
