--- a/2D Controller/HTML/CLASSES/SCRIPTING/ARMOUR-SO/armour-so.html
+++ b/2D Controller/HTML/CLASSES/SCRIPTING/ARMOUR-SO/armour-so.html
@@ -26,12 +26,30 @@
         </div>
         <h2>Description</h2>
         <p>
-            Description goes here.
+            The <b>ArmourSO</b> is a <a class="redirect-link" href="https://docs.unity3d.com/Manual/class-ScriptableObject.html">Scriptable Object</a> that stores the data of an armour object.
+            You can manage the data manually using a custom script, but it's worth noting that within the <a class="redirect-link" href="../ENTITY-HEALTH/entity-health.html">EntityHealth</a>
+            class, this data is accessed to dynamically influence how damage taken is calculated for an entity.
         </p>
         <br>
         <div class="table-division">
-            
-        </div>
+            <table>
+                <tr>
+                    <td class="label"><span class="uninteractable-link">ArmourName</span></td>
+                    <td class="description">The name of the armour game object.</td>
+                </tr>
+                <tr>
+                    <td class="label"><span class="uninteractable-link">ArmourIcon</span></td>
+                    <td class="description">The icon of the amour game object.</td>
+                </tr>
+                <tr>
+                    <td class="label"><span class="uninteractable-link">ArmourPoints</span></td>
+                    <td class="description">The total armour points.</td>
+                </tr>
+                <tr>
+                    <td class="label"><span class="uninteractable-link">ArmourEffectiveness</span></td>
+                    <td class="description">The effectiveness of the armour.</td>
+                </tr>
+            </table>
     </div>
 </body>
 </html>
