--- a/2D Controller/HTML/CLASSES/SCRIPTING/CHARACTER-COMBAT/character-combat.html
+++ b/2D Controller/HTML/CLASSES/SCRIPTING/CHARACTER-COMBAT/character-combat.html
@@ -53,9 +53,10 @@
         <br>
         <h2>Important Note</h2>
         <p>
-            Public methods/properties highlighted in <span style="color:red; text-decoration:underline;">red</span> need to interact with the class(es) responsible for controlling your character's movement to ensure the correct execution of certain
-            functionalities within the <b>CharacterCombat</b> class. It's worth noting that the <a class="redirect-link" href="../HUMANOID-CONTROLLER/humanoid-controller.html">HumanoidController</a>
-            class is already designed to handle such restrictions.
+            Methods and properties highlighted in <span style="color:red; text-decoration:underline;">red</span> need to interact with the class(es) responsible for controlling your character's movement to ensure the correct execution of certain
+            functionalities within the <b>CharacterCombat</b> class.
+            <br>
+            It's worth noting that the <a class="redirect-link" href="../HUMANOID-CONTROLLER/humanoid-controller.html">HumanoidController</a> class is already designed to handle such restrictions.
         </p>
         <br>
         <div class="table-division">
