--- a/2D Controller/HTML/CLASSES/SCRIPTING/ENTITY-HEALTH/PUBLIC-METHODS/reset-regeneration-timer.html
+++ b/2D Controller/HTML/CLASSES/SCRIPTING/ENTITY-HEALTH/PUBLIC-METHODS/reset-regeneration-timer.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TakeDamage</title>
+    <title>ResetRegenerationTimer</title>
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -19,30 +19,21 @@
     <iframe src="../../../../navigation-bar.html"></iframe>
 
     <div class="main-page-division">
-        <h1><a class="redirect-link" href="../entity-health.html">EntityHealth</a>.TakeDamage</h1>
+        <h1><a class="redirect-link" href="../entity-health.html">EntityHealth</a>.ResetRegenerationTimer</h1>
         <h2>Declaration</h2>
-        <p>public void <b>TakeDamage</b>(float <b>amount</b>);</p>
-        <br>
-        <div class="table-division">
-            <span class="table-title">Parameters</span>
-            <table>
-                <tr>
-                    <td class="label"><b>amount</b></td>
-                    <td class="description">The amount of damage the entity will receive.</td>
-                </tr>
-            </table>
-        </div>
+        <p>public void <b>ResetRegenerationTimer</b>();</p>
         <br>
         <h2>Description</h2>
         <p>
-            Inflicts damage on the entity.
+            Resets the health regeneration timer.
             <br><br>
-            When called, this method deducts a specified amount of health points from the entity's current health
-            pool, simulating the effects of damage inflicted by various game mechanics such as character attacks.
+            Be cautious when dealing damage to entities if you intend to use the health regeneration effect. When an entity's health dips below 100%, its health regeneration
+            timer remains unaffected by incoming damage. Often, you'll want the regeneration timer to reset when damage occurs. This function accomplishes just that.
+            Remember to invoke it whenever your entity takes damage.
         </p>
         <br>
         <p>
-            In the example below, the entity will take damage when the '<b>Escape</b>' key is pressed.
+            In the example below, the entity will take damage if the '<b>Escape</b>' key is pressed, and the health regeneration timer will reset.
         </p>
 <pre class="code-block">
 using UnityEngine;
@@ -55,6 +46,7 @@ public class Example : <a class="redirect-link" href="https://docs.unity3d.com/S
     private void <a class="redirect-link" href="https://docs.unity3d.com/ScriptReference/MonoBehaviour.Awake.html">Awake</a>()
     {
         healthScript = <a class="redirect-link" href="https://docs.unity3d.com/ScriptReference/GameObject.GetComponent.html">GetComponent</a>&lt;<a class="redirect-link" href="../entity-health.html">EntityHealth</a>&gt;();
+        healthScript.<a class="redirect-link" href="../EVENTS/on-take-damage.html">OnTakeDamage</a> += Health_OnTakeDamage;
     }
         
     private void <a class="redirect-link" href="https://docs.unity3d.com/ScriptReference/MonoBehaviour.Update.html">Update</a>()
@@ -63,6 +55,10 @@ public class Example : <a class="redirect-link" href="https://docs.unity3d.com/S
         {
             healthScript.<a class="redirect-link" href="take-damage.html">TakeDamage</a>(25f);
         }
+    }
+
+    private void Health_OnTakeDamage(object sender, <a class="redirect-link" href="../entity-health.html">EntityHealth</a>.OnTakeDamageEventArgs e) {
+        healthScript.<b>ResetRegenerationTimer</b>();
     }
 }
 </pre>
