--- a/2D Controller/HTML/CLASSES/MANUAL/CHARACTER-COMBAT/character-combat.html
+++ b/2D Controller/HTML/CLASSES/MANUAL/CHARACTER-COMBAT/character-combat.html
@@ -28,6 +28,8 @@
             The <b>CharacterCombat</b> class is meticulously designed to oversee all combat-related actions in your game. Paired seamlessly with the <a class="redirect-link" href="../ENTITY-HEALTH/entity-health.html">EntityHealth</a>
             class and the <a class="redirect-link" href="../ATTACK-SO/attack-so.html">AttackSO</a> scriptable object, it empowers you to finely manage your character's combat behaviour. Through
             this class, you gain the ability to craft and customize attacks, shaping the combat dynamics of your game to your liking.
+            <br>
+            This component pairs well with <a class="redirect-link" href="../COMBAT-SYSTEM-PROJECTILE/combat-system-projectile.html">CombatSystemProjectile</a> and <a class="redirect-link" href="../ATTACK-SO/attack-so.html">AttackSO</a> components found in the asset.
         </p>
         <br>
         <p>
@@ -53,7 +55,7 @@
             </tr>
             <tr>
                 <td class="label"><b>AttackHitboxTransform</b></td>
-                <td class="description">The transform of the attack hitbox.</td>
+                <td class="description">The transform of the attack hitbox. (See <a class="redirect-link" href="../../../combat-system.html">Combat System</a> for more information)</td>
             </tr>
             <tr>
                 <td class="label"><b>AttackBufferTime</b></td>
