--- a/2D Controller/HTML/CLASSES/MANUAL/COMBAT-SYSTEM-PROJECTILE/combat-system-projectile.html
+++ b/2D Controller/HTML/CLASSES/MANUAL/COMBAT-SYSTEM-PROJECTILE/combat-system-projectile.html
@@ -26,6 +26,8 @@
         <h2>Overview</h2>
         <p>
             The <b>CombatSystemProjectile</b> component is crafted to handle the behaviour of any object, meant to act as a projectile in your game.
+            <br>
+            This component pairs well with <a class="redirect-link" href="../CHARACTER-COMBAT/character-combat.html">CharacterCombat</a> and <a class="redirect-link" href="../ATTACK-SO/attack-so.html">AttackSO</a> components found in the asset.
             <br><br>
             To utilize the component in your Unity project, proceed by attaching the script to the <b>root</b> object of the projectile in the Unity Editor,
             and then configure the parameters exposed in the Inspector to customize its behaviour as per your requirements.
