--- a/2D Controller/HTML/CLASSES/SCRIPTING/CHARACTER-DASH/EVENTS/on-dash-distance-covered.html
+++ b/2D Controller/HTML/CLASSES/SCRIPTING/CHARACTER-DASH/EVENTS/on-dash-distance-covered.html
@@ -38,7 +38,7 @@
             Triggered when the dash action has been completed.
             <br> <br>
             Subscribe to this event to be notified when your character has completed a dash. You can utilize the event's argument to adjust your character's position, in order to avoid
-            overshooting the specified dash distance, which can be configured in the inspector using the '<b>maxDashDistance</b>' field of the component, .
+            overshooting the specified dash distance.
 
 
         </p>
