--- a/2D Controller/HTML/CLASSES/SCRIPTING/ENV-QUERY/env-quey.html
+++ b/2D Controller/HTML/CLASSES/SCRIPTING/ENV-QUERY/env-quey.html
@@ -32,8 +32,8 @@
             By consolidating collision check functions into a single class, the asset's modularity and maintainability are enhanced. Encapsulating collision logic within this
             class not only reduces code duplication but also improves the overall organization of the project.
             <br> <br>
-            To incorporate <b>CharacterEnvironmentalQuery</b> into your project, attach it to any gameObject intended to represent a humanoid character. Once attached, you can
-            reference it in your scripts to gain access to its public methods. Ensure that <b>CharacterEnvironmentalQuery</b> is attached to the main gameObject in question, as
+            To incorporate this class into your project, attach it to any gameObject intended to represent a humanoid character. Once attached, you can
+            reference it in your scripts to gain access to its public methods. Ensure that the class is attached to the main gameObject in question, as
             it utilizes the character's position in various scenarios.
         </p>
         <br>
